feat: PATCH methods
