# agents-api/agents_api/autogen/openapi_model.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
-#   filename:  openapi.yaml
-#   timestamp: 2024-04-05T11:47:21+00:00
+#   filename:  openapi.json
+#   timestamp: 2024-04-08T11:29:23+00:00
 
 from __future__ import annotations
 
@@ -514,7 +514,7 @@ class ChatSettings(BaseModel):
 
     """
     seed: Annotated[
-        int | None, Field(None, ge=-9223372036854775808, le=9223372036854775808)
+        int | None, Field(None, ge=-9223372036854776000, le=9223372036854776000)
     ]
     """
     This feature is in Beta.
@@ -654,17 +654,6 @@ class MemoryAccessOptions(BaseModel):
     """
 
 
-class Instruction(BaseModel):
-    content: str
-    """
-    Content of the instruction
-    """
-    important: bool | None = False
-    """
-    Whether this instruction should be marked as important (only up to 3 instructions per agent can be marked important)
-    """
-
-
 class CreateToolRequest(BaseModel):
     type: Type
     """
@@ -787,7 +776,7 @@ class PatchAgentRequest(BaseModel):
     """
     About the agent
     """
-    instructions: List[Instruction] | None = None
+    instructions: List[str] | None = None
     """
     List of instructions for the agent
     """
@@ -848,7 +837,7 @@ class Agent(BaseModel):
     """
     About the agent
     """
-    instructions: List[Instruction] | None = None
+    instructions: List[str] | None = None
     """
     List of instructions for the agent
     """
@@ -914,7 +903,7 @@ class CreateAgentRequest(BaseModel):
     """
     About the agent
     """
-    instructions: List[Instruction] | None = None
+    instructions: List[str] | None = None
     """
     List of instructions for the agent
     """
@@ -945,15 +934,15 @@ class UpdateAgentRequest(BaseModel):
     A valid request payload for updating an agent
     """
 
-    about: str | None = None
+    about: str
     """
     About the agent
     """
-    instructions: List[Instruction] | None = None
+    instructions: List[str] | None = None
     """
     List of instructions for the agent
     """
-    name: str | None = None
+    name: str
     """
     Name of the agent
     """
